--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,8 @@
 Package: budgeteR
-Title: An Amazing Shiny App
+Title: A budgeting app written in R
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
-Description: What the package does (one paragraph).
+Authors@R: person('Victor', 'Lao', email = 'victorlelao@gmail.com', role = c('cre', 'aut'))
+Description: Shiny app using sqlite to record and analyze daily finances.
 License: What license is it under?
 Imports: 
     config (>= 0.3.1),
@@ -14,4 +10,6 @@ Imports:
     shiny (>= 1.7.4)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
+URL: https://github.com/Spingelhoff/budgeteR
+BugReports: https://github.com/Spingelhoff/budgeteR/issues
