--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,23 @@
 Package: budgeteR
 Title: A budgeting app written in R
 Version: 0.0.0.9000
-Authors@R: person('Victor', 'Lao', email = 'victorlelao@gmail.com', role = c('cre', 'aut'))
+Authors@R: 
+    person("Victor", "Lao", , "victorlelao@gmail.com", role = c("cre", "aut"))
 Description: Shiny app using sqlite to record and analyze daily finances.
-License: What license is it under?
+License: MIT + file LICENSE
+URL: https://github.com/Spingelhoff/budgeteR
+BugReports: https://github.com/Spingelhoff/budgeteR/issues
 Imports: 
     config (>= 0.3.1),
+    DBI,
+    dplyr,
+    DT,
+    ggplot2,
     golem (>= 0.4.1),
+    lubridate,
+    pkgload,
+    RSQLite,
     shiny (>= 1.7.4)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-URL: https://github.com/Spingelhoff/budgeteR
-BugReports: https://github.com/Spingelhoff/budgeteR/issues
