--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .Rproj.user
+.Rbuildignore
+.Rhistory
+*.sqlite
+rsconnect/shinyapps.io/szys2b-victor-lao/budgeteR.dcf
+database.sqlite
+rsconnect/shinyapps.io/szys2b-victor-lao/budgeter.dcf
